<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HighliterTextEditor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="extract">正在解压</string>
    <string name="extract_finish">解压结束</string>
    <string name="extract_error">解压失败</string>

     <string name="label_version">版本</string>
    <string name="label_author">作者</string>
    <string name="label_email">Email</string>
    <string name="label_homepage">主页</string>
    <string name="label_license">授权</string>
    <string name="label_qq_group">QQ群</string>
    <string name="field_license">版本所有 (C) 2015-2020  evilbinary\n
CL编译器为自由软件；您可依据自由软件基金会所发表的GNU通用公共授权条款规定，就本程序再为散布与／或修改；无论您依据的是本授权的第三版或（您自行选择的）任一日后发行的版本。
CL编译器是基于使用目的而加以散布，然而不负任何担保责任；亦无对适售性或特定目的适用性所为的默示性担保。详情请参照GNU通用公共授权 http://www.gnu.org/licenses。</string>
    <string name="about">关于</string>
    <string name="myname">BSD依依鸭</string>
    <string name="qq_group">Lisp兴趣小组 239401374</string>
    <string name="myemail">rootntsd@gmail.com</string>
    <string name="myhomepage">http://evilbinary.org/</string>
    
</resources>