<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:paddingBottom="10dip"
         >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="116dp"
            android:paddingLeft="40dip"
            android:paddingRight="20dp"
            android:src="@drawable/duck" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/field_app_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:text="@string/app_name"
                android:textSize="24dip" />

            <TextView
                android:id="@+id/field_version"
                android:layout_width="180dp"
                android:layout_height="22dip"
                  />
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dip"
        android:paddingLeft="30dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_author"
            android:textSize="16dip" >
        </TextView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dip"
            android:text="@string/myname"
            android:textSize="14dip" >
        </TextView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/label_email"
            android:textSize="16dip" >
        </TextView>

        <TextView
            android:id="@+id/aboutTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:paddingLeft="15dip"
            android:text="@string/myemail"
            android:textSize="14dip" >
        </TextView>

        <TextView
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/label_homepage"
            android:textSize="16dip" >
        </TextView>

        <TextView
            android:id="@+id/aboutTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:paddingLeft="15dip"
            android:text="@string/myhomepage"
            android:textSize="14dip" >
        </TextView>

        
         <TextView
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/label_qq_group"
            android:textSize="16dip" >
        </TextView>
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:linksClickable="true"
            android:paddingLeft="15dip"
            android:text="@string/qq_group"
            android:textSize="14dip" >
        </TextView>


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/label_license"
            android:textSize="16dip" >
        </TextView>
        
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="15dip"
             android:paddingRight="15dip"
             android:text="@string/field_license"
             android:textSize="12dip" >

        </TextView>


    </LinearLayout>

</LinearLayout>